updated home page
added descriptions and lists

--- a/css/home.css
+++ b/css/home.css
@@ -201,6 +201,12 @@ h1, h2 {
 color: #886c54;
 }
 
-ul > li {
+li {
   display: inline-block;
+  margin-right: 1px;
+}
+
+li {
+  margin-left: 1px;
+  list-style-type:circle;
 }
