--- a/css/home.css
+++ b/css/home.css
@@ -1,30 +1,3 @@
-body {
-	background: 
-	linear-gradient(
-		rgba(0, 0, 0, 0.5),
-		rgba(0, 0, 0, 0.5)),
-	url("../images/flowers-hero.jpeg");
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-}
-/* Navbar Stuff */
-button.btn.btn-outline-success {
-	border-radius: 20px;
-	padding: 0.4rem 1.4rem;
-	color: white;
-    border-color: white;
-}
-
-button.navbar-toggler,
-button.navbar-toggler:focus {
-	display: flex;
-    border: none;
-    font-size: 2rem;
-	box-shadow:none;
-}
-
-/* Snapping Scrolling Stuff */
 .scroll-container {
 	height: 100vh;
 	overflow-y: scroll;
@@ -37,10 +10,10 @@ section {
 }
 
 ::-webkit-scrollbar { 
-	display:none; /* Hides scrollbar */
+	display:none; 
 }
 
-/*Hero Stuff*/
+/*CLICK ME BUTTON*/
 .hero {
 	/*text colors*/
 	color: white;
@@ -81,7 +54,7 @@ section {
 }
 
 .hero .btn:hover {
-	box-shadow: inset 0 0 0 2em rgb(22, 32, 35);
+	box-shadow: inset 0 0 0 2em rgb(107, 66, 41);
 	color: white;
 	font-weight: 500;
 	transition: .5s;
@@ -93,7 +66,7 @@ section {
 	background-color: white;
 }
 
-.three,
+
 .stuff {
 	/*text colors*/
 	color: rgb(0, 0, 0);
@@ -106,95 +79,7 @@ section {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-
 	text-align: center;
-}
-
-
-/*Last Page Stuff*/
-.three .stuff {
-	background-color: black;
-	color: white;
-}
-
-.three hr {
-	margin-top: 1rem;
-	margin-bottom: 1rem;
-	border: 0;
-	border-top: 1px solid rgb(255, 255, 255);
-}
-
-section.p-5 {
-	background: none;
-}
-
-ul.override {
-    list-style-position: inside;
-	padding-left: 0px;
-	display: flex;
-}
-
-ul.override li {
-	padding-left: 20px;
-}
-
-
-
-ul.navbar-nav.mx-auto.mb-2.mb-lg-0 {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-
-/*registration*/
-element.style {
-    /* background-color: #eee; */
-    border-radius: 0.5rem 0.5rem 0 0;
-
-}
-
-.row-override { /*brings card down center*/
-	margin-top: 125px;
-}
-
-.form-check.flex.justify-content-center.mb-5 { /*changes the pos of i agree all statemtns.*/
-    margin-left: 50px;
-}
-
-/* Login Page */
-.m-16.sm\:m-20.bg-white.shadow.sm\:rounded-lg.flex.justify-center.flex-1,
-.flex-1.bg-indigo-100.text-center.hidden.lg\:flex {
-    border-radius: 50px; /* Creates a rounded border*/
-}
-
-/* PRODUCTS */
-i.fa.fa-shopping-cart {
-    color: white;
-	margin-left: 15px;
-}
-
-/* Checkout Override */
-.container {
-	max-width: 960px;
-	background-color: #886c54;
-  }
-  
-  .lh-condensed { line-height: 1.25; }
-
-.container.checkout {
-	border-radius: 30px;
-	margin-top: 15px;
-}
-
-/* Fix user-login */
-.container-full {
-	height: 80vh;
-}
-
-.list-stuff {
-	display: flex;
-	justify-content: center;
-	gap: 15px;
 }
 
 h1, h2 {
