added radio buttons
added radio buttons to registration html

--- a/css/products.css
+++ b/css/products.css
@@ -84,7 +84,7 @@ p {
 	border: 1px solid #aaa;
 	font-weight: bold;
 	
-	/*#8ba888*/
+	/* Alternative color for button shadow #c0cfb2*/
 }
 
 .button a:after{
