added list to home page
added padding to registration page

--- a/css/products.css
+++ b/css/products.css
@@ -93,7 +93,7 @@ p {
 	top: 0;
 	right: -10px;
 	width: 0%;
-	background: #8ba888;
+	background: #bc9e82;
 	height: 100%;
 	z-index: -1;
 	transition: width 0.3s ease-in-out;
