--- a/css/products.css
+++ b/css/products.css
@@ -27,7 +27,7 @@ section {
 
 .outer {
 	position: relative;
-	background: #6f4e37 ;
+	background: #ffffff ;
 	height: 350px;
 	width: 550px;
 	overflow: hidden;
